--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-tsconfig-paths": "^4.0.7",
     "vue-tsc": "^1.0.24"
   }
 }
