--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-vue": "^4.0.0",
+    "create-gitignore": "^0.1.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "prettier": "^2.8.4",
